Tried to fix comments bug. Getting stuck.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -11,7 +11,6 @@
 }
 
 .debugger-box {
-	display: none;
 	border: 3px solid green;
 }
 
